--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
         />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link rel="icon" href="/favicon.ico" type="image/x-icon" />
-        <title>dormit</title>
+        <title>PDF Reader Mode</title>
     </head>
 
     <body>
